tests/baselines/reference/templateStringInYieldKeyword.errors.txt
tests/cases/conformance/es6/templates/templateStringInYieldKeyword.ts(1,9): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/templates/templateStringInYieldKeyword.ts(3,13): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/conformance/es6/templates/templateStringInYieldKeyword.ts (2 errors) ====
    function* gen() {
            ~
!!! error TS9001: Generators are not currently supported.
        // Once this is supported, the inner expression does not need to be parenthesized.
        var x = yield `abc${ x }def`;
                ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
    }
    